--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "vite": "^7.2.0"
+  },
+  "engines": {
+  "node": ">=18.0.0"
   }
+
 }
